--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Daniel Guerron</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://github.com/DannyKTurns/Website-Sample/blob/main/styles.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
