--- a/index.html
+++ b/index.html
@@ -4,32 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>Daniel Guerron</title>
-  <link rel="stylesheet" href="root/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="root/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="css/cloud.png" alt="cloud-img">
     <h1>I'm Daniel</h1>
     <h2>Web Developer and Integration Consultant</h2>
-    <img class="bottom-cloud" src="root/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="css/cloud.png" alt="cloud-img">
+    <img src="css/mountain.png" alt="mountain-img">
   </div>
-  <div class="middle-container">
     <div class="profile">
-      <img src="root/profile.png" alt="profile-img">
+      <img src="css/profile.png" alt="profile-img">
       <h2>Father - Husband - All Around Nice Guy.</h2>
     </div>
     <div class="skills">
       <h2>What can I offer?</h2>
       <div class="skill-row">
-        <img src="root/api.png" alt="api-img">
+        <img src="css/api.png" alt="api-img">
         <h3>Software Integration</h3>
         <p>I'll make sure we get your data from A to B using the latest and most secure APIs on the market.</p>
       </div>
       <div class="skill-row">
-        <img src="root/calendar.png" alt="calendar">
+        <img src="css/calendar.png" alt="calendar">
         <h3>Project Management</h3>
         <p>I have many years of experience working with clients of all sizes and keeping deadlines met.</p>
       </div>
